Issue with Paypal upgrade if only single period is enabled, Currency position

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -547,6 +547,9 @@ ul.pricing-column li, .pricing-column ul li {
 .feature-section-wrapper {
     overflow: hidden;
 }
+.feature-section-wrapper .feature-section {
+	margin-left: 0;
+}
 
 .feature-section,
 .pricing-column {
