PR-8 Hoang, Fixed: Stripe email doesn't send after checkout, Feature table doesnt show properly

--- a/pro-sites-files/css/checkout.css
+++ b/pro-sites-files/css/checkout.css
@@ -565,8 +565,13 @@ ul.pricing-column li, .pricing-column ul li {
 }
 
 .feature-content .feature-name {
-    /*font-size: 17px;*/
     text-align: center;
+    font-weight: 600;
+}
+
+.feature-content .feature-description {
+    text-align: center;
+    font-size: 13px;
 }
 
 li.summary {
