Fixed: Unable to edit feature description if whole text is removed, Changes from dev branch

--- a/pro-sites-files/css/psts-admin.css
+++ b/pro-sites-files/css/psts-admin.css
@@ -1003,6 +1003,10 @@ table.widefat.prosites-premium-plugins tbody tr th p {
     color: #888;
 }
 
+.feature-table .text-item {
+    min-height: 70px;
+}
+
 #module-comparison-table .feature-table th,
 #module-comparison-table .feature-table td {
     border-left: 1px solid #f1f1f1;
