--- a/pro-sites-files/css/pricing-tables/option1.css
+++ b/pro-sites-files/css/pricing-tables/option1.css
@@ -76,7 +76,7 @@
 }
 
 .pricing-column .coupon-box.coupon-invalid:after {
-    color: #B6B6B6;
+    color: #ff0000;
 }
 
 .plan-price.original-amount.scratch:after {
